<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android-task-1</string>
    <string name="enter_first_name">Enter Your First Name</string>
    <string name="enter_last_name">Enter Your Last Name</string>
    <string name="enter_birthday">Enter Your Birthday</string>
    <string name="default_first_name">Name</string>
    <string name="default_last_name">Surname</string>
    <string name="showInform">Show introduced information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show">Show</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>

</resources>
